tests/ui/parser/misspelled-keywords/pub-fn.stderr
error: expected one of `#`, `async`, `auto`, `const`, `default`, `enum`, `extern`, `fn`, `gen`, `impl`, `macro_rules`, `macro`, `mod`, `pub`, `safe`, `static`, `struct`, `trait`, `type`, `unsafe`, or `use`, found `puB`
  --> $DIR/pub-fn.rs:1:1
   |
LL | puB fn code() {}
   | ^^^ expected one of 21 possible tokens
   |
help: write keyword `pub` in lowercase
   |
LL - puB fn code() {}
LL + pub fn code() {}
   |

error: aborting due to 1 previous error

